# rgb

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
rgb-cli/: Cargo.toml
rgb-cli/src/: main.rs
rgb-core/: Cargo.toml
rgb-core/src/: cartridge.rs  instructions.rs  io.rs  joypad.rs  lib.rs  memory.rs  mmu.rs  ppu.rs  system.rs
rgb-core/tests/: blargg_tests.rs
rgb-wasm/: Cargo.toml  index.html  serve.sh
rgb-wasm/src/: lib.rs
src/: context.rs  instructions.rs  main.rs  system.rs
test-roms/: mem_timing-2.gb
