[package]
name = "rgb-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
rgb-core = { path = "../rgb-core" }
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "ImageData",
    "Node",
    "Window",
] }
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]
